package edu.univalle.gadim.virtual_lab_platform.commons.type;

public interface UniqueIdGenerator {
  String generate();
}
